<resources>
    <string name="app_name">Mercapp</string>
    <string name="user_string">user</string>

    <string name="password_string">password</string>
    <string name="visit_website">mercadona.es</string>
    <string name="login">log in</string>
    <string name="valid_user_msg">Credentials valid!</string>
    <string name="invalid_user_msg">Credentials no valid</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Sign up</string>

    <string name="catalog_option">Products catalog</string>
    <string name="cart_option">Shopping cart</string>
    <string name="user_option">User options</string>
    <string name="product_option">Product list</string>
    <string name="login_header">Autologin</string>
    <string name="autologin_title">"Autologin "</string>
    <string name="password_title">Password</string>
    <string name="username_title">Username</string>
    <string name="notificacions_header">Notifications</string>
    <string name="notifications_title">Allow notifications</string>
    <string name="pronouns_header">Pronouns</string>
    <string name="pronouns_title">Choose your pronouns</string>
    <string name="logout_header">Logout</string>
    <string name="logout_title">Click here to Logout</string>
</resources>